; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/nfsd/extr_nfs4state.c_laundromat_main.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/nfsd/extr_nfs4state.c_laundromat_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.work_struct = type { i32 }

@.str = private unnamed_addr constant [50 x i8] c"NFSD: laundromat_main - sleeping for %ld seconds\0A\00", align 1
@laundry_wq = common dso_local global i32 0, align 4
@laundromat_work = common dso_local global i32 0, align 4
@HZ = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.work_struct*)* @laundromat_main to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @laundromat_main(%struct.work_struct* %0) #0 {
  %2 = alloca %struct.work_struct*, align 8
  %3 = alloca i32, align 4
  store %struct.work_struct* %0, %struct.work_struct** %2, align 8
  %4 = call i32 (...) @nfs4_laundromat()
  store i32 %4, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  %6 = call i32 @dprintk(i8* getelementptr inbounds ([50 x i8], [50 x i8]* @.str, i64 0, i64 0), i32 %5)
  %7 = load i32, i32* @laundry_wq, align 4
  %8 = load i32, i32* %3, align 4
  %9 = load i32, i32* @HZ, align 4
  %10 = mul nsw i32 %8, %9
  %11 = call i32 @queue_delayed_work(i32 %7, i32* @laundromat_work, i32 %10)
  ret void
}

declare dso_local i32 @nfs4_laundromat(...) #1

declare dso_local i32 @dprintk(i8*, i32) #1

declare dso_local i32 @queue_delayed_work(i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
